--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -3,5 +3,7 @@
   <!-- <app-home-page></app-home-page> -->
   <!-- <app-registation-form></app-registation-form> -->
   <!-- <app-login-form></app-login-form> -->
-  <app-home-page-logged></app-home-page-logged>
+  <!-- <app-home-page-logged></app-home-page-logged> -->
+  <app-doctors-list></app-doctors-list>
+  <!-- <app-patients-list></app-patients-list> -->
 </div>
