--- a/medical_visits_angular/src/app/doctors-list/doctors-list.component.html
+++ b/medical_visits_angular/src/app/doctors-list/doctors-list.component.html
@@ -1,1 +1,36 @@
-<p>doctors-list works!</p>
+<div id="Menu">
+    <div><img src="./assets/MV_icon.png" id="MV_menuLogo"></div>
+    <div><img src="./assets/home_page.png" class="menu_icons" id="home_page"></div>
+    <div><img src="./assets/contact.png" class="menu_icons" id="contact"></div>
+    <div><img src="./assets/doctor.png" class="menu_icons" id="doctor"></div>
+    <div><img src="./assets/calendar.png" class="menu_icons" id="calendar"></div>
+</div>
+
+<div id="MV_head"><img src="./assets/MV_icon.png" id="MV_png">MedicalVisits</div>
+
+<div class="top_buttons">
+    <div class="head_buttons"><button class="button_style">MY ACCOUNT</button></div>
+    <div class="head_buttons"><button class="button_style">LOG OUT</button></div>
+</div>
+
+<div class="list-head">Doctors</div>
+<div class="list-items">
+    <div class="list-input-item"><input type="search" placeholder="Type here..." class="list_input" id="search_input"></div>
+    <div class="list-input-item"><select class="list_input" id="select_input">
+        <option value="">First Name</option>
+    </select></div>
+    <div class="list-input-item"><button class="list_input" id="search_button">SEARCH</button></div>
+</div>
+
+<div class="table-list">
+    <ul>
+        <li>
+            <span>First name</span>
+            <span>Surname</span>
+            <span>Specalization</span>
+            <span>Phone number</span>
+            <span>E-mail address</span>
+            <span>Action</span>
+        </li>
+    </ul>
+</div>
