--- a/medical_visits_angular/src/app/home-page/home-page.component.html
+++ b/medical_visits_angular/src/app/home-page/home-page.component.html
@@ -9,8 +9,8 @@
 <div id="MV_head"><img src="./assets/MV_icon.png" id="MV_png">MedicalVisits</div>
 
 <div class="top_buttons">
-    <div class="head_buttons"><button class="button_style">LOG IN</button></div>
-    <div class="head_buttons"><button class="button_style">SIGN UP</button></div>
+    <div class="head_buttons"><button class="button_style" routerLink="/login-form">LOG IN</button></div>
+    <div class="head_buttons"><button class="button_style" routerLink="/registration-form">SIGN UP</button></div>
 </div>
 
 <div class="main_page_photo"></div>
