Added simple routing

--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -1,9 +1,10 @@
 <!-- app.component.html -->
 <div class="container">
+  <router-outlet></router-outlet>
   <!-- <app-home-page></app-home-page> -->
   <!-- <app-registation-form></app-registation-form> -->
   <!-- <app-login-form></app-login-form> -->
   <!-- <app-home-page-logged></app-home-page-logged> -->
-  <app-doctors-list></app-doctors-list>
+  <!-- <app-doctors-list></app-doctors-list> -->
   <!-- <app-patients-list></app-patients-list> -->
 </div>
