--- a/medical_visits_angular/src/app/home-page/home-page.component.html
+++ b/medical_visits_angular/src/app/home-page/home-page.component.html
@@ -16,4 +16,4 @@
 <div class="main_page_photo"></div>
 
 <div id="main_page_head">WELCOME</div>
-<div class="main_button"><button class="main_button_style">START HERE</button></div>
+<div class="main_button"><button class="main_button_style" routerLink="/registration-form">START HERE</button></div>
