lista doctorów - początek

--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -1,6 +1,10 @@
 <!-- app.component.html -->
 <div class="container">
+  <app-medical-visits-head-logo></app-medical-visits-head-logo>
+  <app-nav-menu></app-nav-menu>
   <router-outlet></router-outlet>
+
+
   <!-- <app-home-page></app-home-page> -->
   <!-- <app-registation-form></app-registation-form> -->
   <!-- <app-login-form></app-login-form> -->
