--- a/medical_visits_angular/src/app/login-form/login-form.component.html
+++ b/medical_visits_angular/src/app/login-form/login-form.component.html
@@ -1,12 +1,3 @@
-<div id="Menu">
-    <div><img src="./assets/MV_icon.png" id="MV_menuLogo"></div>
-    <div><img src="./assets/home_page.png" class="menu_icons" id="home_page"></div>
-    <div><img src="./assets/contact.png" class="menu_icons" id="contact"></div>
-    <div><img src="./assets/doctor.png" class="menu_icons" id="doctor"></div>
-    <div><img src="./assets/calendar.png" class="menu_icons" id="calendar"></div>
-</div>
-
-<div id="MV_head"><img src="./assets/MV_icon.png" id="MV_png">MedicalVisits</div>
 <div id="head">WELCOME BACK</div>
 
 <form #form="ngForm">
@@ -41,6 +32,6 @@
 
 
     <button type="submit" [disabled]="!form.valid" class="inputs">LOG IN</button>
-    <div id="MV_head">Forgot your password?</div>
-    <div id="MV_head">Don’t have an account? Sign Up</div>
+    <div id="important-font">Forgot your password?</div>
+    <div id="important-font">Don’t have an account? Sign Up</div>
 </form>
