--- a/medical_visits_angular/src/app/doctors-list/doctors-list.component.html
+++ b/medical_visits_angular/src/app/doctors-list/doctors-list.component.html
@@ -1,13 +1,3 @@
-<div id="Menu">
-    <div><img src="./assets/MV_icon.png" id="MV_menuLogo"></div>
-    <div><img src="./assets/home_page.png" class="menu_icons" id="home_page"></div>
-    <div><img src="./assets/contact.png" class="menu_icons" id="contact"></div>
-    <div><img src="./assets/doctor.png" class="menu_icons" id="doctor"></div>
-    <div><img src="./assets/calendar.png" class="menu_icons" id="calendar"></div>
-</div>
-
-<div id="MV_head"><img src="./assets/MV_icon.png" id="MV_png">MedicalVisits</div>
-
 <div class="top_buttons">
     <div class="head_buttons"><button class="button_style">MY ACCOUNT</button></div>
     <div class="head_buttons"><button class="button_style">LOG OUT</button></div>
@@ -22,15 +12,33 @@
     <div class="list-input-item"><button class="list_input" id="search_button">SEARCH</button></div>
 </div>
 
-<div class="table-list">
-    <ul>
-        <li>
-            <span>First name</span>
-            <span>Surname</span>
-            <span>Specalization</span>
-            <span>Phone number</span>
-            <span>E-mail address</span>
-            <span>Action</span>
-        </li>
-    </ul>
-</div>
+<ul>
+    <li id="list-header">
+        <div class="list-div list-header-element" id="LiHeader-firstname">First name</div>
+        <div class="list-div list-header-element" id="LiHeader-surname">Surname</div>
+        <div class="list-div list-header-element" id="LiHeader-specalization">Specalization</div>
+        <div class="list-div list-header-element" id="LiHeader-phonenumber">Phone number</div>
+        <div class="list-div list-header-element" id="LiHeader-email">E-mail address</div>
+        <div class="list-div list-header-element" id="LiHeader-action">Action</div>
+    </li>
+    <li>
+        <span>1</span>
+        <span>1</span>
+        <span>1</span>
+    </li>
+    <li>
+        <span>1</span>
+        <span>1</span>
+        <span>1</span>
+    </li>
+    <li>
+        <span>1</span>
+        <span>1</span>
+        <span>1</span>
+    </li>
+    <li id="list-footer">
+        <button class="footer-btn" id="prev-btn">&lt;</button>
+        <div class="list-counter"></div>
+        <button class="footer-btn" id="next-btn">&gt;</button>
+    </li>
+</ul>
