AuthenticationService created with logging on backend, added alerts when an error occurs during logging/registration

--- a/medical_visits_angular/src/app/registation-form/registation-form.component.html
+++ b/medical_visits_angular/src/app/registation-form/registation-form.component.html
@@ -160,6 +160,11 @@
         </div>
     </div>
 
+    <div *ngIf="showError">
+      <p class="error-message">{{errorMessage}}</p>
+    </div>
+
     <button type="submit" [disabled]="!form.valid" class="inputs">SIGN UP</button>
+    <div *ngIf="showError" class="error-message">{{errorMessage}}</div>
     <div *ngIf="form.invalid && form.touched" class="error-message">Please fill out the entire form!</div>
 </form>
