dokonczenie wygladu list, przeniesienie przyciskow gornych do osobnych komponentow

--- a/medical_visits_angular/src/app/home-page-logged/home-page-logged.component.html
+++ b/medical_visits_angular/src/app/home-page-logged/home-page-logged.component.html
@@ -1,7 +1,4 @@
-<div class="top_buttons">
-    <div class="head_buttons"><button class="button_style">MY ACCOUNT</button></div>
-    <div class="head_buttons"><button class="button_style">LOG OUT</button></div>
-</div>
+<app-top-buttons-logged></app-top-buttons-logged>
 
 <div class="main_page_photo"></div>
 
