--- a/medical_visits_angular/src/app/list/doctors-list/doctors-list.component.html
+++ b/medical_visits_angular/src/app/list/doctors-list/doctors-list.component.html
@@ -1,7 +1,4 @@
-<div class="top_buttons">
-    <div class="head_buttons"><button class="button_style">MY ACCOUNT</button></div>
-    <div class="head_buttons"><button class="button_style">LOG OUT</button></div>
-</div>
+<app-top-buttons-logged></app-top-buttons-logged>
 
 <div class="list-head">Doctors</div>
 <div class="list-items">
@@ -14,28 +11,94 @@
 
 <ul>
     <li id="list-header">
-        <div class="list-div list-header-element" id="LiHeader-firstname">First name</div>
-        <div class="list-div list-header-element" id="LiHeader-surname">Surname</div>
-        <div class="list-div list-header-element" id="LiHeader-specalization">Specalization</div>
-        <div class="list-div list-header-element" id="LiHeader-phonenumber">Phone number</div>
-        <div class="list-div list-header-element" id="LiHeader-email">E-mail address</div>
-        <div class="list-div list-header-element" id="LiHeader-action">Action</div>
+        <div class="list-div list-header-element">First name</div>
+        <div class="list-div list-header-element">Surname</div>
+        <div class="list-div list-header-element">Specalization</div>
+        <div class="list-div list-header-element">Phone number</div>
+        <div class="list-div list-header-element">E-mail address</div>
+        <div class="list-div list-header-element">Action</div>
     </li>
-    <li>
-        <span>1</span>
-        <span>1</span>
-        <span>1</span>
+    <li class="li-element">
+        <div class="li-element-div">Zbychu</div>
+        <div class="li-element-div">Zbychowski</div>
+        <div class="li-element-div">Gynecologist</div>
+        <div class="li-element-div">213769420</div>
+        <div class="li-element-div">zbyszekkozak@zut.edu.pl</div>
+        <div class="li-element-div">
+            <a>Details</a>&nbsp;&nbsp;&nbsp;
+            <a>Edit</a>
+        </div>
     </li>
-    <li>
-        <span>1</span>
-        <span>1</span>
-        <span>1</span>
-    </li>
-    <li>
-        <span>1</span>
-        <span>1</span>
-        <span>1</span>
-    </li>
+    <li class="li-element">
+        <div class="li-element-div">Zbychu</div>
+        <div class="li-element-div">Zbychowski</div>
+        <div class="li-element-div">Gynecologist</div>
+        <div class="li-element-div">213769420</div>
+        <div class="li-element-div">zbyszekkozak@zut.edu.pl</div>
+        <div class="li-element-div">
+            <a>Details</a>&nbsp;&nbsp;&nbsp;
+            <a>Edit</a>
+        </div>
+    <li class="li-element">
+        <div class="li-element-div">Zbychu</div>
+        <div class="li-element-div">Zbychowski</div>
+        <div class="li-element-div">Gynecologist</div>
+        <div class="li-element-div">213769420</div>
+        <div class="li-element-div">zbyszekkozak@zut.edu.pl</div>
+        <div class="li-element-div">
+            <a>Details</a>&nbsp;&nbsp;&nbsp;
+            <a>Edit</a>
+        </div>
+    <li class="li-element">
+        <div class="li-element-div">Zbychu</div>
+        <div class="li-element-div">Zbychowski</div>
+        <div class="li-element-div">Gynecologist</div>
+        <div class="li-element-div">213769420</div>
+        <div class="li-element-div">zbyszekkozak@zut.edu.pl</div>
+        <div class="li-element-div">
+            <a>Details</a>&nbsp;&nbsp;&nbsp;
+            <a>Edit</a>
+        </div>
+    <li class="li-element">
+        <div class="li-element-div">Zbychu</div>
+        <div class="li-element-div">Zbychowski</div>
+        <div class="li-element-div">Gynecologist</div>
+        <div class="li-element-div">213769420</div>
+        <div class="li-element-div">zbyszekkozak@zut.edu.pl</div>
+        <div class="li-element-div">
+            <a>Details</a>&nbsp;&nbsp;&nbsp;
+            <a>Edit</a>
+        </div>
+    <li class="li-element">
+        <div class="li-element-div">Zbychu</div>
+        <div class="li-element-div">Zbychowski</div>
+        <div class="li-element-div">Gynecologist</div>
+        <div class="li-element-div">213769420</div>
+        <div class="li-element-div">zbyszekkozak@zut.edu.pl</div>
+        <div class="li-element-div">
+            <a>Details</a>&nbsp;&nbsp;&nbsp;
+            <a>Edit</a>
+        </div>
+    <li class="li-element">
+        <div class="li-element-div">Zbychu</div>
+        <div class="li-element-div">Zbychowski</div>
+        <div class="li-element-div">Gynecologist</div>
+        <div class="li-element-div">213769420</div>
+        <div class="li-element-div">zbyszekkozak@zut.edu.pl</div>
+        <div class="li-element-div">
+            <a>Details</a>&nbsp;&nbsp;&nbsp;
+            <a>Edit</a>
+        </div>
+    <li class="li-element">
+        <div class="li-element-div">Zbychu</div>
+        <div class="li-element-div">Zbychowski</div>
+        <div class="li-element-div">Gynecologist</div>
+        <div class="li-element-div">213769420</div>
+        <div class="li-element-div">zbyszekkozak@zut.edu.pl</div>
+        <div class="li-element-div">
+            <a>Details</a>&nbsp;&nbsp;&nbsp;
+            <a>Edit</a>
+        </div>
     <li id="list-footer">
         <button class="footer-btn" id="prev-btn">&lt;</button>
         <div class="list-counter"></div>
