--- a/medical_visits_angular/src/app/home-page/home-page.component.html
+++ b/medical_visits_angular/src/app/home-page/home-page.component.html
@@ -1,7 +1,4 @@
-<div class="top_buttons">
-    <div class="head_buttons"><button class="button_style" routerLink="/login-form">LOG IN</button></div>
-    <div class="head_buttons"><button class="button_style" routerLink="/registration-form">SIGN UP</button></div>
-</div>
+<app-top-buttons-unlogged></app-top-buttons-unlogged>
 
 <div class="main_page_photo"></div>
 
