--- a/medical_visits_angular/src/app/top-buttons/top-buttons-logged/top-buttons-logged.component.html
+++ b/medical_visits_angular/src/app/top-buttons/top-buttons-logged/top-buttons-logged.component.html
@@ -1,4 +1,4 @@
 <div class="top_buttons">
     <div class="head_buttons"><button class="button_style">MY ACCOUNT</button></div>
-    <div class="head_buttons"><button class="button_style">LOG OUT</button></div>
+    <div class="head_buttons"><button class="button_style" (click)="buttonClicked()">LOG OUT</button></div>
 </div>
