--- a/medical_visits_angular/src/app/list/patients-list/patients-list.component.html
+++ b/medical_visits_angular/src/app/list/patients-list/patients-list.component.html
@@ -1,4 +1,4 @@
-<app-top-buttons-logged></app-top-buttons-logged>
+<!-- <app-top-buttons-logged></app-top-buttons-logged> -->
 
 <div class="list-head">Patients</div>
 <div class="list-items">
