--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -2,6 +2,8 @@
 <div class="container">
   <app-medical-visits-head-logo></app-medical-visits-head-logo>
   <app-nav-menu></app-nav-menu>
+  <div *ngIf="userLogged"><app-top-buttons-logged (logoutButtonClicked)="logout()"></app-top-buttons-logged></div>
+  <div *ngIf="!userLogged"><app-top-buttons-unlogged></app-top-buttons-unlogged></div>
   <router-outlet></router-outlet>
 
 
