--- a/medical_visits_angular/src/app/list/doctors-list/doctors-list.component.css
+++ b/medical_visits_angular/src/app/list/doctors-list/doctors-list.component.css
@@ -11,11 +11,11 @@
     position: absolute;
     top: 200px;
     left: 100px;
+    display: flex;
 }
 
-.list-input-item{
-    float: left;
-    margin: 0px 30px 0px 0px;
+.list-input-item {
+    margin-right: 30px;
 }
 
 .list_input{
@@ -105,14 +105,6 @@ li:last-child {
     color: #fff;
     border: none;
     cursor: pointer;
-}
-
-.list-counter::before{
-    content: "1 of ";
-}
-
-.list-counter::after{
-    content: counter(item);
 }
 
 .li-element{
