Add edit/details components, edit components first look

--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <app-medical-visits-head-logo></app-medical-visits-head-logo>
   <app-nav-menu></app-nav-menu>
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
 
 
   <!-- <app-home-page></app-home-page> -->
@@ -11,4 +11,17 @@
   <!-- <app-home-page-logged></app-home-page-logged> -->
   <!-- <app-doctors-list></app-doctors-list> -->
   <!-- <app-patients-list></app-patients-list> -->
+
+
+
+
+
+
+  <app-edit-patient-for-admin></app-edit-patient-for-admin>
+  <!-- <app-edit-patient-for-doctor></app-edit-patient-for-doctor> -->
+  <!-- <app-edit-doctor-for-admin></app-edit-doctor-for-admin> -->
+
+  <!-- <app-details-patient-for-admin></app-details-patient-for-admin> -->
+  <!-- <app-details-patient-for-doctor></app-details-patient-for-doctor> -->
+  <!-- <app-details-doctor-for-admin></app-details-doctor-for-admin> -->
 </div>
