--- a/medical_visits_angular/src/app/form/login-form/login-form.component.html
+++ b/medical_visits_angular/src/app/form/login-form/login-form.component.html
@@ -36,6 +36,6 @@
 
     <button type="submit" [disabled]="!form.valid" class="inputs">LOG IN</button>
     <div id="important-font">Forgot your password?</div>
-    <div id="important-font">Don’t have an account? Sign Up</div>
+    <div id="important-font" routerLink="/registration-form">Don’t have an account? Sign Up</div>
 </form>
 
