--- a/medical_visits_angular/src/app/forms_css.css
+++ b/medical_visits_angular/src/app/forms_css.css
@@ -105,3 +105,16 @@ label {
 input[type="radio"] {
     width: 35px;
 }
+
+.info_inputs{
+    width: 100%;
+    height: 250px;
+    margin: 5px 5px 50px 5px;
+}
+
+.info_input {
+    width: 683px;
+    height: 100%;
+    margin: 5px 0px 10px 5px;
+    box-shadow: 20px 20px 100px rgba(0, 0, 0, 0.25);
+}
