Fully working doctors list for admin, with details and edit view

--- a/medical_visits_angular/src/app/list/doctors-list/doctors-list.component.css
+++ b/medical_visits_angular/src/app/list/doctors-list/doctors-list.component.css
@@ -121,3 +121,10 @@ a{
     font-weight: bold;
     text-decoration: underline;
 }
+
+.arrow-div {
+  position: relative;
+  right: 50px;
+  top: 2px;
+  float: right;
+}
