--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -4,7 +4,7 @@
   <app-nav-menu></app-nav-menu>
   <div *ngIf="userLogged"><app-top-buttons-logged (logoutButtonClicked)="logout()"></app-top-buttons-logged></div>
   <div *ngIf="!userLogged"><app-top-buttons-unlogged></app-top-buttons-unlogged></div>
-  <!-- <router-outlet></router-outlet> -->
+  <router-outlet></router-outlet>
 
 
   <!-- <app-home-page></app-home-page> -->
@@ -29,6 +29,6 @@
   <!-- <app-details-doctor-for-admin></app-details-doctor-for-admin> -->
 
 
-  <app-visit-details-for-admin></app-visit-details-for-admin>
+  <!-- <app-visit-details-for-admin></app-visit-details-for-admin> -->
   <!-- <app-visit-details-for-doctor></app-visit-details-for-doctor> -->
 </div>
