--- a/medical_visits_angular/src/app/nav-menu/nav-menu.component.css
+++ b/medical_visits_angular/src/app/nav-menu/nav-menu.component.css
@@ -4,10 +4,11 @@
 
 #Menu {
     position: fixed;
-    top: 50px;
+    top: 0px;
+    bottom: ;
     left: 10px;
     width: 60px;
-    height: 500px;
+    height: 100vh;
     background: #FFFFFF;
     box-shadow: 0px 5px 100px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
